Fix training text not showing in light mode

--- a/ui/src/global.scss
+++ b/ui/src/global.scss
@@ -202,6 +202,8 @@
 }
 
 .radial {
+  fill: black;
+
   .node circle {
     fill: #999;
   }
